# nero_collection

./: README.md  environment.yml  pyproject.toml  setup_env.sh
calibration/: README.md  __init__.py  collect_dynamics.py  collect_static.py  common.py  config.yaml  dynamics_common.py  evaluation.py  excitation.py  fit_static.py  generate_excitation.py  h5_dynamics.py  identification.py  identify_dynamics.py  identify_fixed_inertia.py  identify_h5_dynamics.py  preprocessing.py  regressor.py  simulation.py  static_model.py  urdf_writer.py  validate_dynamics.py  validate_internal.py  write_calibrated_urdf.py
calibration/data/: dynamics_train_a.npz  dynamics_train_b.npz  dynamics_train_c.npz  dynamics_train_high.npz  dynamics_train_low.npz  dynamics_train_mid.npz  dynamics_validation.npz  excitation_train.npz  excitation_train.scene.xml  excitation_train_b.npz  excitation_train_b.scene.xml  excitation_train_c.npz  excitation_train_c.scene.xml  excitation_train_high.npz  excitation_train_high.scene.xml  excitation_train_low.npz  excitation_train_low.scene.xml  excitation_train_mid.npz  excitation_train_mid.scene.xml  excitation_validation.npz  excitation_validation.scene.xml  excitation_validation_center_c.npz  excitation_validation_center_c.scene.xml  static_baseline.npz
calibration/mujoco/: scene_template.xml
calibration/results/: dynamics_identification.yaml  dynamics_manifest.yaml  static_fit.yaml  (+4 more)
configs/: master_slave_can.yaml
nero_collection/: __init__.py  cameras.py  cli.py  config.py  contact_wrench.py  dynamics_processing.py  filters.py  h5_writer.py  keyboard.py  realtime_plot.py  time_utils.py
nero_collection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check_can_links.sh  check_master_modes.py  check_nero_enable_status.py  check_v4l2_cameras.py  nero_teleop_collect.py  print_arm_q.py  probe_leader_impedance.py  setup_can.sh
tests/: test_acceleration_filter.py  test_cameras.py  test_can_setup.py  test_dynamics_identification.py  test_h5_dynamics.py  test_keyboard.py  test_mit_control.py  test_post_save_reset.py  test_realtime_plot.py  test_startup_sequence.py  test_static_calibration.py
(+39 files in other folders)
