[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nero-collection"
version = "0.1.0"
description = "Nero dual-arm teleoperation data collection."
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.11",
    "numpy>=1.23,<3",
    "PyYAML>=6.0",
]

[project.scripts]
nero-collect = "nero_collection.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["nero_collection*"]
